refined questions bank, removed some bad questions, refined some not so conceptually accurate ones

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!-- header -->
       <div class="header">
         <div class="header-content">
-          <h1>🎓 PSM-I Exam Simulator</h1>
+          <h1>🎓 PSM-I Exam Simulator by Pablis</h1>
           <div class="timer" id="timer">
             <span>⏱️</span>
             <span id="timeDisplay">60:00</span>
